--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@deck.gl/aggregation-layers": "^9.2.8",
     "@deck.gl/google-maps": "^9.2.8",
+    "@google/generative-ai": "^0.24.1",
     "@googlemaps/js-api-loader": "^2.0.2",
     "clsx": "^2.1.1",
     "deck.gl": "^9.2.8",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "react": "19.2.3",
