--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@deck.gl/google-maps": "^9.2.8",
     "@google/generative-ai": "^0.24.1",
     "@googlemaps/js-api-loader": "^2.0.2",
+    "canvas": "^3.2.1",
     "clsx": "^2.1.1",
     "deck.gl": "^9.2.8",
     "framer-motion": "^12.34.3",
+    "html2pdf.js": "^0.14.0",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -29,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^10.0.1",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
